<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ucsd.meetup.CreateProfile"
    tools:showIn="@layout/activity_edit_profile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Full Name"
        android:id="@+id/fullName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fullNameIn"
        android:layout_below="@+id/fullName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="500dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="City"
        android:id="@+id/city"
        android:layout_below="@+id/fullNameIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="State"
        android:id="@+id/state"
        android:layout_above="@+id/cityIn"
        android:layout_alignLeft="@+id/stateIn"
        android:layout_alignStart="@+id/stateIn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityIn"
        android:layout_below="@+id/city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="175dp"
        android:layout_alignLeft="@+id/city" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stateIn"
        android:layout_below="@+id/state"
        android:layout_toRightOf="@+id/cityIn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:id="@+id/editBtn"
        android:width="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="175dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/zipIn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancelBtn"
        android:width="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="175dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/zipIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/zipCode"
        android:layout_below="@+id/cityIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Zip Code" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zipIn"
        android:layout_below="@+id/zipCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="175dp" />

</RelativeLayout>
