...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="Profile"
        android:id="@+id/profileButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true" />

    <Button
...
        android:layout_toEndOf="@+id/events" />

    <Button
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:text="Logout"
        android:id="@+id/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/createEvent_MyEvent"
        android:layout_toEndOf="@+id/createEvent_MyEvent" />

</RelativeLayout>
